--- a/agency-business/pom.xml
+++ b/agency-business/pom.xml
@@ -341,18 +341,11 @@
                 <version>1.9.12</version>
             </dependency>
 
-            <dependency>
-                <groupId>org.codehaus.jackson</groupId>
-                <artifactId>jackson-core-asl</artifactId>
-                <version>1.9.12</version>
-            </dependency>
-
-            <dependency>
-                <groupId>jackson-mapper-asl</groupId>
-                <artifactId>jackson-mapper-asl</artifactId>
-                <version>1.9.2</version>
-            </dependency>
-
+            <!--<dependency>-->
+                <!--<groupId>jackson-mapper-asl</groupId>-->
+                <!--<artifactId>jackson-mapper-asl</artifactId>-->
+                <!--<version>1.9.2</version>-->
+            <!--</dependency>-->
 
             <!--velocity-->
             <dependency>
